# SpacetimeDB_UnrealClient

./: .gitignore  README.md  fix_list.md  setup-link.bat  setup-link.sh  setup-spacetimedb.bat  setup-spacetimedb.sh  unreal_list.md
.cursor/rules/: spdrule.mdc
STDB_UE_Example/: .gitignore  STDB_UE_Example.sln  STDB_UE_Example.uproject
STDB_UE_Example/Config/: DefaultEngine.ini  DefaultGame.ini
STDB_UE_Example/Plugins/: SpacetimeDB_UnrealClient
STDB_UE_Example/Source/: STDB_UE_Example.Target.cs  STDB_UE_ExampleEditor.Target.cs
SpacetimeDB_UnrealClient/: SpacetimeDB_UnrealClient.uplugin  build-rust-win-debug.bat  build-rust-win.bat  build-rust.sh
SpacetimeDB_UnrealClient/ClientModule/: Cargo.toml  README.md  build.rs
SpacetimeDB_UnrealClient/ClientModule/.cargo/: config.toml
SpacetimeDB_UnrealClient/ClientModule/cpp_src/: UnrealReplication.h  bridge.cpp  bridge.h
SpacetimeDB_UnrealClient/ClientModule/src/: class.rs  ffi.rs  lib.rs  prediction.rs
SpacetimeDB_UnrealClient/ClientModule/src/actor/: mod.rs
SpacetimeDB_UnrealClient/ClientModule/src/net/: mod.rs
SpacetimeDB_UnrealClient/ClientModule/src/object/: mod.rs
SpacetimeDB_UnrealClient/ClientModule/src/property/: mod.rs  serialization.rs
SpacetimeDB_UnrealClient/ClientModule/src/rpc/: mod.rs
SpacetimeDB_UnrealClient/SharedModule/: Cargo.toml  README.md
SpacetimeDB_UnrealClient/SharedModule/src/: actor.rs  connection.rs  constants.rs  lib.rs  lifecycle.rs  object.rs  property.rs  relevancy.rs  rpc.rs  types.rs
SpacetimeDB_UnrealClient/Source/: README.md
SpacetimeDB_UnrealClient/rust/: Cargo.toml  build-rust-win.bat  build-rust.sh  build.rs
SpacetimeDB_UnrealClient/rust/src/: lib.rs
spacetime-db-docs/: blog.html  community.html  contact-a-founder.html  cookies.html  docs.html  home.html  index.html  install.html  maincloud.html  pricing.html  privacy.html  site.webmanifest  terms-of-service.html
spacetimedb-rust-documentation/: index.html
(+202 files in other folders)
