[package]
name = "stdb_client"
version = "0.1.0"
edition = "2021"
description = "Client-side SpacetimeDB functionality for Unreal Engine integration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdb_shared = { path = "../SharedModule" }
spacetimedb-sdk = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cxx = "1.0"
log = "0.4"
once_cell = "1.8.0"
rand = "0.8.5"

[lib]
name = "stdb_client"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cxx-build = "1.0" 