[package]
name = "stdb_shared"
version = "0.1.0"
edition = "2021"
description = "Shared types and utilities for SpacetimeDB Unreal Client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "stdb_shared"
path = "src/lib.rs" 