[package]
name = "spacetimedb-unreal-client"
version = "0.1.0"
edition = "2021"
authors = ["SpacetimeDB Team"]
description = "SpacetimeDB client for Unreal Engine"
license = "MIT"

[lib]
name = "spacetimedb_client"
crate-type = ["staticlib", "cdylib"]

[dependencies]
cxx = "1.0"
spacetimedb-sdk = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17"

[build-dependencies]
cxx-build = "1.0"

[features]
default = []
# Enable this feature to include additional debug logging
debug_logging = []

[profile.release]
# These options optimize the Rust library for size while maintaining performance
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"  # Optimize for size
strip = true     # Strip symbols from the binary 